# enterprise-client-python

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  setup.cfg
.github/: dependabot.yaml
.github/workflows/: build.yaml  dependabot.yaml  reusable-build.yaml  test.yaml  update-dependencies.yaml  update-pomerium.yaml  update.yaml
examples/: example-ssh-routes.yaml  generateSshRoutes.py  new-route.py
scripts/: generate  protoc-gen-python_grpc  update  update-dependencies
src/envoy/annotations/: deprecation_pb2.py  deprecation_pb2.pyi  resource_pb2.py  resource_pb2.pyi
src/envoy/type/: hash_policy_pb2.py  http_pb2.py  http_status_pb2.py  percent_pb2.py  range_pb2.py  range_pb2.pyi  semantic_version_pb2.py  semantic_version_pb2.pyi  token_bucket_pb2.py  token_bucket_pb2.pyi
src/example_workspace/foo/: bar_pb2.py
src/pb/validate/: validate_pb2.pyi
src/pomerium/: client.py  test_client.py
src/pomerium/pb/: activity_log_grpc.py  activity_log_pb2.py  activity_log_pb2.pyi  activity_log_pb2_grpc.py  activity_log_pb2_grpc.pyi  audit_svc_grpc.py  audit_svc_pb2.py  audit_svc_pb2.pyi  audit_svc_pb2_grpc.py  audit_svc_pb2_grpc.pyi  clusters_pb2.py  clusters_pb2.pyi  clusters_pb2_grpc.py  clusters_pb2_grpc.pyi  console_config_grpc.py  console_config_pb2.py  console_config_pb2.pyi  databroker_svc_grpc.py  databroker_svc_pb2.py  databroker_svc_pb2.pyi  databroker_svc_pb2_grpc.py  databroker_svc_pb2_grpc.pyi  devices_grpc.py  devices_pb2.py  devices_pb2.pyi  devices_pb2_grpc.py  (+62 more)
src/tests/: test_import.py
src/validate/: validate_pb2.py  validate_pb2.pyi
(+760 files in other folders)
