[metadata]
name = pomerium-enterprise-client
version = 0.0.2
license = Apache-2.0
url = https://www.pomerium.com
author = Pomerium Developers
author_email = info@pomerium.com
description = "Client and dependencies for interacting with the Pomerium Enterprise API"
project_urls = 
    Source = https://github.com/pomerium/enterprise-client-python

classifiers=
    'Programming Language :: Python :: 3'
    'License :: OSI Approved :: Apache Software License'
    'Operating System :: OS Independent'


[options]
package_dir =
    = src
packages = find:
install_requires = 
    grpcio
    protobuf

[options.packages.find]
where = src
